remove unused boxing and unboxing